--- a/package.json
+++ b/package.json
@@ -4,14 +4,35 @@
   "description": "this the realtime pizza websie",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "node server.js",
+    "dev": "nodemon server.js",
+    "development": "mix",
+    "watch": "npx mix watch",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "author": "nayan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "connect": "^3.7.0",
+    "connect-mongo": "^4.6.0",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "nodemon": "^2.0.22"
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
+    "flash": "^1.1.0",
+    "mongo": "^0.1.0",
+    "mongoose": "^5.9.25",
+    "nodemon": "^2.0.22",
+    "noty": "^3.2.0-beta-deprecated",
+    "session": "^0.1.0"
+  },
+  "devDependencies": {
+    "laravel-mix": "^6.0.49",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.63.6",
+    "sass-loader": "^12.6.0"
   }
 }
