--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "connect": "^3.7.0",
     "connect-mongo": "^4.6.0",
     "dotenv": "^16.3.1",
@@ -27,6 +28,8 @@
     "mongoose": "^5.9.25",
     "nodemon": "^2.0.22",
     "noty": "^3.2.0-beta-deprecated",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "session": "^0.1.0"
   },
   "devDependencies": {
