--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
+    "moment": "^2.29.4",
     "mongo": "^0.1.0",
     "mongoose": "^5.9.25",
     "nodemon": "^2.0.22",
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
